--- a/angular.json
+++ b/angular.json
@@ -71,7 +71,10 @@
               "browserTarget": "chatbot:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "port": 4201
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
