--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@devui-design/icons": "^1.3.0",
     "ng-devui": "^15.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
