--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ngx-markdown": "^15.1.1",
     "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
+    "sse.js": "^0.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
