feat: Add English support

--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,14 @@
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
+      "i18n": {
+        "sourceLocale": "zh-CN",
+        "locales": {
+          "en-US": {
+            "translation": "src/locale/messages.en-US.arb"
+          }
+        }
+      },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
