--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular-devkit/build-angular": "^15.2.1",
     "@angular/cli": "~15.2.1",
     "@angular/compiler-cli": "^15.2.0",
+    "@angular/localize": "^15.2.1",
     "@types/jasmine": "~4.3.0",
     "@types/marked": "^4.0.8",
     "jasmine-core": "~4.5.0",
